# nurgaliev_oop_c_plus_plus

nurgaliev_r_d/: CMakeLists.txt
nurgaliev_r_d/prj.lab/: CMakeLists.txt
nurgaliev_r_d/prj.lab/arrayd/: arrayd.cpp
nurgaliev_r_d/prj.lab/arrayd/include/arrayd/: arrayd.h
nurgaliev_r_d/prj.lab/arrayt/include/arrayt/: arrayt.hpp
nurgaliev_r_d/prj.lab/matrixs/: matrixs.cpp
nurgaliev_r_d/prj.lab/matrixs/include/matrixs/: matrixs.hpp
nurgaliev_r_d/prj.lab/orto/: orto.20230519
nurgaliev_r_d/prj.lab/rational/: rational.cpp
nurgaliev_r_d/prj.lab/rational/include/rational/: rational.hpp
nurgaliev_r_d/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  matrixs_test.cpp  rational_test.cpp
